--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_02.md
@@ -122,7 +122,7 @@ The main tasks for this exercise are as follows:
 
   - Password: **AzurePa$$w0rd**
 
-  - Pricing Tier: **F4 Standard**
+  - Size: **F4 Standard**
 
   - Virtual Network: **vnet20532**
 
