--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -84,19 +84,19 @@
 
   c. In the **Account kind** list, ensure that the *General purpose* option is selected.
 
-  b. In the **Performance** section, ensure that the *Standard* option is selected.
+  d. In the **Performance** section, ensure that the *Standard* option is selected.
 
-  b. Click on the **Replication** list and select the **Locally-redundant storage (LRS)** option.
+  e. Click on the **Replication** list and select the **Locally-redundant storage (LRS)** option.
 
-  c. In the **Location** list, select the region closest to your current location.
+  f. In the **Location** list, select the region closest to your current location.
 
-  f. In the **Resource group** section, select the **Use existing** option.
+  g. In the **Resource group** section, select the **Use existing** option.
 
-  g. In the **Resource group** section, locate the dialog box and provide the value **20532**.
+  h. In the **Resource group** section, locate the dialog box and provide the value **20532**.
 
-  h. Ensure that the **Pin to Dashboard** option is selected.
+  i. Ensure that the **Pin to Dashboard** option is selected.
 
-  e. Click **Create**.
+  j. Click **Create**.
 
     > **Note** Wait for Azure to finish creating the storage account prior to moving forward with the lab. You will receive a notification when the *Storage Account* is created and you will see the Storage Account's blade.
 
@@ -124,15 +124,15 @@
 
   b. In the **VM disk type** list, select the value **HDD**.
 
-  b. In the **User Name** dialog box, provide the value **Student**.
+  c. In the **User Name** dialog box, provide the value **Student**.
 
-  c. In the **Password** and **Confirm Password** dialog boxes, provide the value **AzurePa$$w0rd**.
+  d. In the **Password** and **Confirm Password** dialog boxes, provide the value **AzurePa$$w0rd**.
 
-  d. In the **Resource Group** section, locate the **Use existing** option, and then select the **20532** resource group.
+  e. In the **Resource Group** section, locate the **Use existing** option, and then select the **20532** resource group.
 
-  e. In the **Location** list, select the region closest to your current location.
+  f. In the **Location** list, select the region closest to your current location.
 
-  f. Click **OK**.
+  g. Click **OK**.
 
 7. In the **Create Virtual Machine** blade that displays, click **Size** and perform the following steps:
 
@@ -152,9 +152,9 @@
 
   d. Under the **Diagnostic Storage Account** section, select the **Disable** option.
 
-  d. Leave default values for **Public IP Address**, **Network Security Group (firewall)** and **Monitoring**.
+  e. Leave default values for **Public IP Address**, **Network Security Group (firewall)** and **Monitoring**.
 
-  e. Scroll down and click **OK**.
+  f. Scroll down and click **OK**.
 
 9. In the **Create Virtual Machine** blade that displays, click **Summary** and click **OK** to create the virtual machine using your specified configuration.
 
@@ -262,7 +262,7 @@
 
   a. Click **Next**.
 
-  b. Verify that the **Simple volume size in MB** is **20477**.
+  b. Verify that the **Simple volume size in MB** is a number greater than **100000**.
 
   c. Click **Next**.
 
@@ -329,7 +329,7 @@
 1. On the Start screen, locate and click the **Visual Studio 2015** tile.
 
   > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
-  
+
 2. You will be prompted to sign-in using a **Microsoft Account**. Perform the following steps:
 
     a. Click the **Sign in** button.
