--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
@@ -36,7 +36,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
     * User name: **Student**
 
-    * Password: **AzurePa$w0rd**
+    * Password: **AzurePa$$w0rd**
 
   5. Verify that you received the credentials to sign in to the Azure portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
