--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -56,15 +56,15 @@
 
   a. In the **Queue** **Name** box, type **signin**.
 
-  a. In the **Region** list, select the same region that you selected for the namespace.
+  b. In the **Region** list, select the same region that you selected for the namespace.
 
-  a. In the **Namespace** box, provide the value **sb20532[Your Name]**.
+  c. In the **Namespace** box, provide the value **sb20532[Your Name]**.
 
-  a. Click next arrow to move to the next step in the wizard.
+  d. Click next arrow to move to the next step in the wizard.
 
-  a. Leave all fields as their default values.
+  e. Leave all fields as their default values.
 
-  a. Click the check mark button to create the new queue.
+  f. Click the check mark button to create the new queue.
 
 > **Results:** After completing this exercise, you will have created a Service Bus namespace and queue by using the Portal.
 
@@ -210,7 +210,7 @@
 
 1. On the Start screen, click the **Internet Explorer** tile.
 
-2. Go to https://portal.azure.com
+2. Go to <https://portal.azure.com>
 
 3. Enter the email address of your Microsoft account. Click **Continue**.
 
