--- a/Instructions/Labs/dotnet/Mod01/20532C_LAB_01.md
+++ b/Instructions/Labs/dotnet/Mod01/20532C_LAB_01.md
@@ -45,7 +45,7 @@ The main tasks for this exercise are as follows:
 
 2. If this is your first time logging in to the Azure portal, you will see a dialog with a tour of the portal. Click Get Started.
 
-> Results: After completing this exercise, you will have signed in to the Azure Portal.
+> **Results:** After completing this exercise, you will have signed in to the Azure Portal.
 
 ## Exercise 2: Customizing the Azure Portal
 
