--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
@@ -10,7 +10,7 @@ Even though the Contoso Events web application is public, the Administration app
 
 After you complete this lab, you will be able to:
 
-  - Create an Azure AD by using the Classic Portal.
+  - Create an Azure AD directory by using the Classic Portal.
 
   - Create users in Azure AD by using the Classic Portal.
 
