Bug Fixes for Module 4

--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
@@ -68,7 +68,7 @@ The main tasks for this exercise are as follows:
 
   - Name: **db20532**
 
-  - Edition: **Basic**
+  - Pricing Tier: **Basic**
 
   - Resource Group: **20532**
 
