--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -28,11 +28,11 @@
 
 4.  In the **New** blade that displays, click **Data + Storage**, and then **SQL Database** from **Data + Storage** blade.
 
-5.  In the **SQL database** blade that displays, locate the **Name** box and provide the value **db20532**.
+5.  In the **SQL database** blade that displays, locate the **Database name** box and provide the value **db20532**.
 
 6. Click **Pricing Tier**.
 
-7. In the **Recommended pricing tier** blade that displays, click the **View all** link and then select the **Basic** option.
+7. In the **Choose your pricing tier** blade that displays, click the **View all** link and then select the **Basic** option.
 
 8. Click **Select** to close the blade.
 
