Mod 4 Bug Fixes

--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
@@ -108,7 +108,7 @@ The main tasks for this exercise are as follows:
 
   3. Debug the **Contoso.Events.Web** web project.
 
-## Exercise 3:	Using Entity Framework with Azure SQL Databases
+## Exercise 3: Using Entity Framework with Azure SQL Databases
 
 ### Scenario
 
@@ -142,7 +142,7 @@ The main tasks for this exercise are as follows:
 
 2. Update the **EventsContextInitializer** class with the **public** accessor.
 
-3. Update the **EventsContextInitializer** class to inherit from the **CreateDatabaseIfNotExists&lt;EventsContext&gt;** generic class.
+3. Update the **EventsContextInitializer** class to inherit from the **CreateDatabaseIfNotExists<EventsContext>** generic class.
 
 4. Add a **using** statement for the **System.Data.Entity** namespace.
 
