--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -90,7 +90,7 @@
 
 ## Exercise 3: Using Entity Framework with Azure SQL Databases
 
-#### Task 2: Configure DbContext with a new DatabaseInitializer
+#### Task 1: Configure DbContext with a new DatabaseInitializer
 
 1.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data** project, point to **Add** and then click **New Item**.
 
@@ -116,7 +116,7 @@
     public class EventsContextInitializer
     ```
 
-5.  In the **EventsContextInitializer** class, add the **DbMigrationsConfiguration&lt;EventsContext&gt;** inheritance statement to the right of the class definition:
+5.  In the **EventsContextInitializer** class, add the **CreateDatabaseIfNotExists<EventsContext>** inheritance statement to the right of the class definition:
 
     ```
     public class EventsContextInitializer
@@ -146,7 +146,7 @@
 
 11. Save the *EventsContext.cs* file.
 
-#### Task 3: Implement seed data with DbContext
+#### Task 2: Implement seed data with DbContext
 
 1.  In the Solution Explorer pane, expand the **Contoso.Events.Data** project.
 
@@ -203,7 +203,7 @@
 
 10. In the Solution Explorer pane, right-click the **Contoso.Events.Data** project, and then click **Build**.
 
-#### Task 4: Publish the web application with updated DbContext to Azure
+#### Task 3: Publish the web application with updated DbContext to Azure
 
 1.  In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
 
@@ -261,7 +261,7 @@
 
     > **Note:** The deployment process for the new App Service is relatively short and should take 2-5 minutes.
 
-9.  In the **Microsoft Azure Publish Settings** dialog box, perform the following steps:
+9.  In the **Publish Web** dialog box, perform the following steps:
 
     a. Leave the default values in all the fields.
 
@@ -269,17 +269,17 @@
 
 > **Note:** It typically takes five to ten minutes for the publish process to complete. You can track the progress of your publish in the Microsoft Azure Activity Log (**View** &gt; **Other Windws** &gt; **Microsoft Azure Activity Log**) pane that displays when you publish your Web App project.
 
-#### Task 5: Verify that the Azure Web App website is using the new data
+#### Task 4: Verify that the Azure Web App website is using the new data
 
 1.  Wait for the publish process to complete and the console window to display the message **Complete**.
 
     > **Note:** The publish process is complete when the message “**Complete”** displays in the **Microsoft Azure Activity Log**’s history console. The green circular indicator in the Activity Log does not indicate that the publish process is complete, but it indicates that the package is uploaded successfully.
 
-2.  In the **Microsoft App Service Activity** pane, click the hyperlink that directs you to the published web application.
+2.  In the **Azure App Service Activity** pane, click the hyperlink that directs you to the published web application.
 
 3.  Verify that the website displays the single event that you created in your Entity Framework context initializer.
 
-#### Task 6: Sign in to the Azure Portal
+#### Task 5: Sign in to the Azure Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
@@ -289,7 +289,7 @@
 
 4. In the password box, type the password of your Microsoft account, and then click **Sign In**.
 
-#### Task 7: View the data in the Azure SQL Database
+#### Task 6: View the data in the Azure SQL Database
 
 1.  In the navigation pane on the left side, scroll down, and then click **More Services**.
 
@@ -331,7 +331,9 @@
 
     d. In the **Password** box, type **TestPa$$w0rd**.
 
-    e. In the **Select or enter a atabase name** dropdown, select **db20532**.
+    e. In the **Select or enter a database name** dropdown, select **db20532**.
+
+    f. Click the **OK** button.
 
     > **Note:** If firewall rules are not updated on the server, you may have to wait a few more minutes before proceeding.
 
