Module Bug Fixes

--- a/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
+++ b/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
@@ -40,41 +40,41 @@
 
     e. In the next **App Service plan** blade, locate the **App Service plan** dialog box and provide the value **SamplePlan**.
 
-    b. In the **Location** list, select the region that is closest to your location.
+    f. In the **Location** list, select the region that is closest to your location.
 
-    c. Select the **Pricing tier** option.
+    g. Select the **Pricing tier** option.
 
-    d. In the **Choose your pricing tier** blade, click the **View all** link.
+    h. In the **Choose your pricing tier** blade, click the **View all** link.
 
-    e. Locate and select the **Free** pricing tier.
+    i. Locate and select the **Free** pricing tier.
 
-    f. Click the **Select** button.
+    j. Click the **Select** button.
 
-    g. Back in the **App Service plan** blade, click the **OK** button.
+    k. Back in the **App Service plan** blade, click the **OK** button.
 
-    h. Back in the **Web App + SQL** blade, click the **SQL Database** option.
+    l. Back in the **Web App + SQL** blade, click the **SQL Database** option.
 
-    i. In the **Database** blade, click the **Create a new database** option.
+    m. In the **Database** blade, click the **Create a new database** option.
 
-    j. In the **SQL Database** blade, locate the **Name** box and provide the value **EventsContextDB**.
+    n. In the **SQL Database** blade, locate the **Name** box and provide the value **EventsContextDB**.
 
-    k. In the **SQL Database** blade, click the **Target server** option.
+    o. In the **SQL Database** blade, click the **Target server** option.
 
-    h. In the **Server** blade, click the **Create a new server** option.
+    p. In the **Server** blade, click the **Create a new server** option.
 
-    i. In the **Server name** dialog box, create a unique name for your server instance.
+    q. In the **Server name** dialog box, create a unique name for your server instance.
 
-    i. In the **Server admin login** dialog box, create a user name (**testuser**) for your administrative SQL user.
+    r. In the **Server admin login** dialog box, create a user name (**testuser**) for your administrative SQL user.
 
-    j. In the **Password** and **Confirm Password** dialog boxes, create a password (**TestPa$$w0rd**) for your administrative SQL user.
+    s. In the **Password** and **Confirm Password** dialog boxes, create a password (**TestPa$$w0rd**) for your administrative SQL user.
 
-    b. In the **Location** list, select the region that is closest to your location.
+    t. In the **Location** list, select the region that is closest to your location.
 
-    c. Click the **Select** button.
+    u. Click the **Select** button.
 
-    d. Back in the **SQL Database** blade, click the **Select** button.
+    v. Back in the **SQL Database** blade, click the **Select** button.
 
-    k. Click the **Create** button to create your Web App and SQL database.
+    w. Click the **Create** button to create your Web App and SQL database.
 
 #### Task 2: Go to the newly created Web App's placeholder page
 
