--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_04.md
@@ -210,7 +210,7 @@ The main tasks for this exercise are as follows:
 
 2. Sign in to the Azure Portal (https://portal.azure.com).
 
-#### Task 6: View the migrated data in the Azure SQL Portal
+#### Task 6: View the data in the Azure SQL Database
 
 1. View the list of SQL databases for your subscription.
 
