--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -74,7 +74,7 @@
 
 2.  On the taskbar, click the **File Explorer** icon.
 
-3.  In the Libraries window, go to **Allfiles (F):\\Mod04\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln**.
+3.  In the *This PC* window, go to **Allfiles (F):\\Mod04\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln**.
 
 4.  In the **Solution Explorer** pane, right-click the **Contoso.Events.DataGeneration** project, point to **Debug**, and then click **Start New Instance**.
 
