--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -34,15 +34,15 @@
 
 7.  In the **Blob service** blade that displays, view the list of your containers.
 
-8.  At the top of the blade, click **Add**.
+8.  At the top of the blade, click the **Container** button.
 
-9.  In the **Add a container** blade that displays, perform the following steps:
+9.  In the **New container** blade that displays, perform the following steps:
 
     a. In the **Name** box, type **example**.
 
     b. In the **Access Type** list, select **Container**.
 
-    c. Click **Create** to create your container.
+    c. Click the **Create** button to create your container.
 
 #### Task 3: Obtain the Storage Account connection string
 
