--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -166,7 +166,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
 2.  In the **Add New Project** dialog box, perform the following steps:
 
-    a. Expand **Installed**, expand **Templates**, expand **Visual C\#**, and then click **Web**.
+    a. Expand **Installed**, expand **Visual C#**, and then click **Web**.
 
     b. Click the **ASP.NET Web Application** project type.
 
@@ -266,10 +266,11 @@ Enter the email address and password for your Microsoft account, and then click 
 
 2.  On the **Debug** menu, click **Start Debugging**.
 
-    a. **Microsoft Visual Studio** dialog will appear indicating that you can configure IIS Express to trust the self-signed certificate.
+    a. The **Microsoft Visual Studio** dialog will appear indicating that you can configure IIS Express to trust the self-signed certificate.
+
     b. Click **Yes**.
 
-    c. **Security Warning** dialog will appear indicating that the self-signed certificate cannot be verified but can still be installed. d. Click **Yes**.
+    c. The **Security Warning** dialog will appear indicating that the self-signed certificate cannot be verified but can still be installed. d. Click **Yes**.
 
 3.  Sign in by using the **Standard User** account and temporary password that was created earlier in this lab.
 
