Updated Settings Blade
Now the Settings blade is shown as a section in the resource's blade.
Instructions have been updated to reflect this.

--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -162,9 +162,9 @@
 
 10. Select the newly created virtual machine from your Dashboard.
 
-11. In the **vm20532** blade, click the **Settings** button at the top of the blade.
+11. In the **vm20532** blade, locate the **Settings** section.
 
-12. In the **Settings** blade, click **Disks**.
+12. In the **Settings** section, select the **Disks** option.
 
 13. In the **Disks** blade, click **Attach New**.
 
