--- a/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
+++ b/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
@@ -240,9 +240,9 @@
 
 2.  In the **App Services** list, click the Web App that you just created.
 
-3. In your *Web App*'s blade, click the **Settings** button at the top of the blade.
+3. In your *Web App*'s blade, locate the **Settings** section.
 
-4. In the **Settings** blade, scroll-down and select the **Application settings** option.
+4. In the **Settings** section, select the **Application settings** option.
 
 8.  In the **Application settings** blade, scroll-down to the **App Settings** section.
 
