--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -254,7 +254,7 @@
 
 8. Click the **Settings** button at the top of the blade.
 
-8. In the **Settings** blade, select the **Access keys** option.
+8. In the **Settings** section, select the **Access keys** option.
 
 9. In the **Access keys** blade, locate a key that you wish to use.
 
