Module Bug Fixes

--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
@@ -1,4 +1,4 @@
-# Module 6: Storing NoSQL Data in Azure
+# Module 6: Storing Tabular Data in Azure
 
 # Lab: Storing Event Registration Data in Azure Storage Tables
 
