--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -270,7 +270,9 @@ Enter the email address and password for your Microsoft account, and then click 
 
     b. Click **Yes**.
 
-    c. The **Security Warning** dialog will appear indicating that the self-signed certificate cannot be verified but can still be installed. d. Click **Yes**.
+    c. The **Security Warning** dialog will appear indicating that the self-signed certificate cannot be verified but can still be installed.
+
+    d. Click **Yes**.
 
 3.  Sign in by using the **Standard User** account and temporary password that was created earlier in this lab.
 
