Fixed answer key

--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -388,7 +388,7 @@
 
 5.  Expand the node for the storage account used in this lab under the **Storage Accounts** node.
 
-6.  Expand the **Blob Containers** node under **Development** account node.
+6.  Expand the **Blob Containers** node under the node **stor20532*\[Your Name Here*\]**.
 
 7.  Select the **signin** container, and then click **Properties Tab** below.
 
