--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
@@ -256,7 +256,7 @@ The main tasks for this exercise are as follows:
 
 1. View the **signin** container in your recently used storage account:
 
-  - Account name: **Development**
+  - Account name: **stor20532[*Your Name*]**
 
   - Container name: **signin**
 
