Lab 8 - Missing message serialization
In Lab 8, Task 2, added message serialization to json string.

--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -197,7 +197,7 @@
 1. After the above mentioned code, create a new instance of the **CloudQueueMessage** class by passing in the string **message** into the constructor:
 
   ```
-  CloudQueueMessage queueMessage = new CloudQueueMessage(message);
+  CloudQueueMessage queueMessage = new CloudQueueMessage(JsonConvert.SerializeObject(message));
   ```
 
 1. Invoke the **AddMessage** method of the *CloudQueue* variable by using the **CloudQueueMessage** as the parameter:
