--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -126,7 +126,7 @@
 
   c. In the **User Name** dialog box, provide the value **Student**.
 
-  d. In the **Password** and **Confirm Password** dialog boxes, provide the value **AzurePa$$w0rd**.
+  d. In the **Password** and **Confirm Password** dialog boxes, provide the value **AzurePa$$w0rd**
 
   e. In the **Resource Group** section, locate the **Use existing** option, and then select the **20532** resource group.
 
