--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -24,11 +24,11 @@
 
 2.  In the **Browse** blade that displays, click **SQL databases**.
 
-3.  At the top-left corner of the portal, click **New**.
+3.  At the top-left corner of the portal, click + **New**.
 
-4.  In the **New** blade that displays, click **Data + Storage**, and then **SQL Database** from **Data + Storage** blade.
+4.  In the **New** blade that displays, click **Databases**, and then **SQL Database** from **Databases** blade.
 
-5.  In the **SQL database** blade that displays, locate the **Database name** box and provide the value **db20532**.
+5.  In the **SQL Database** blade that displays, locate the **Database name** box and provide the value **db20532**.
 
 6. Click **Pricing Tier**.
 
