--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
@@ -188,10 +188,10 @@ The main tasks for this exercise are as follows:
   container.CreateIfNotExists();
   ```
 
-1. Create a blob reference by using the new **blobName** variable, and then use the **OpenReadAsync** method to create a *Stream* variable as shown in the following code:
+1. Create a blob reference by using the new **_blobId** variable, and then use the **OpenReadAsync** method to create a *Stream* variable as shown in the following code:
 
   ```
-  ICloudBlob blob = container.GetBlockBlobReference(\_blobId);
+  ICloudBlob blob = container.GetBlockBlobReference(_blobId);
 
   Stream blobStream = await blob.OpenReadAsync();
   ```
