Resolved formatting issues in Module 10 Lab

--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -198,6 +198,8 @@ Enter the email address and password for your Microsoft account, and then click 
 
 5.  Sign in by using the **Admin User** account (**admin@ad20532\[*Your Name*\].onmicrosoft.com**) and the temporary password that is created earlier in this lab.
 
+6.  If you are prompted with an **Additional security verification** dialog, you can safely close and ignore this dialog.
+
 6.  In the **Change Password** dialog box, update your password to **Pa$$w0rd**.
 
 7.  In the **New ASP.NET Project – Contoso.Events.Management** dialog box, click **OK**.
@@ -275,6 +277,8 @@ Enter the email address and password for your Microsoft account, and then click 
     d. Click **Yes**.
 
 3.  Sign in by using the **Standard User** account and temporary password that was created earlier in this lab.
+
+6.  If you are prompted with an **Additional security verification** dialog, you can safely close and ignore this dialog.
 
 4.  In the **Change Password** dialog box, update your password to **Pa$$w0rd**.
 
