Modules 2, 3 & 6 Demo Bug Fixes

--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -344,7 +344,19 @@
 
     > **Note:** You may be prompted by Internet Explorer to remember this password. You can safely close and ignore this dialog.
 
-3. If you have never used **Visual Studio** in the past, you will be prompted to configure settings that will control the appearance of the IDE. You can skip this section and click **OK**.
+3. If you have never used **Visual Studio** in the past, you will be prompted to configure your Microsoft Account. Perform the following steps:
+
+    a.  Select your **country\region** from the provided list.
+
+    b.  Leave the remaining fields set to their default values.
+
+    c.  Click the **Continue** button.
+
+3. If you have never used **Visual Studio** in the past, you will also be prompted to configure the apperance of your IDE. Perform the following steps:
+
+    a.  Leave all fields set to their default values.
+
+    b.  click the **OK** button.
 
 4. Wait for *Visual Studio* to finish **preparing for first use**.
 
