--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
@@ -143,7 +143,7 @@ The main tasks for this exercise are as follows:
 
     ```
     string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
-    var storageAccount = CloudStorageAccount.Parse(connectionString);
+    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
     ```
 
 4.  Create a *CloudTable* variable by using the storage account and a Storage table named **EventRegistrations** as shown in the following code:
@@ -177,7 +177,7 @@ The main tasks for this exercise are as follows:
 
     ```
     string connectionString = ConfigurationManager.AppSettings["Microsoft.WindowsAzure.Storage.ConnectionString"];
-    var storageAccount = CloudStorageAccount.Parse(connectionString);
+    var storageAccount = Microsoft.WindowsAzure.Storage.CloudStorageAccount.Parse(connectionString);
     ```
 
 4.  Create a *CloudTable* variable by using the storage account, and a Storage table named **EventRegistrations** as shown in the following code:
