--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -10,7 +10,7 @@
 
 2.  On the taskbar, click the **File Explorer** icon.
 
-3.  In the **Libraries** window, go to **Allfiles (F):\\Mod06\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln.**
+3.  In the **This PC** window, go to **Allfiles (F):\\Mod06\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln.**
 
 4.  In the **Solution Explorer** pane, expand the **Roles** solution folder.
 
@@ -276,7 +276,7 @@
 
     d. In the **Performance** section, ensure that the *Standard* option is selected.
 
-    e. Click on the **Replication** list and select the **Locally Redundant (LRS)** option.
+    e. Click on the **Replication** list and select the **Locally-Redundant Storage (LRS)** option.
 
     f. In the **Location** list, select the region closest to your current location.
 
@@ -291,8 +291,6 @@
 6. Once the **Storage account** instance is created, the blade for the new instance will open automatically.
 
 7. In the **Storage account** blade, record the name of your *storage account*.
-
-8. Click the **Settings** button at the top of the blade.
 
 8. In the **Settings** section, select the **Access keys** option.
 
@@ -441,6 +439,8 @@
 6.  In the yellow prompt asking if you would like to download the remaining entities, click **click here**.
 
 7.  Drill-down into the properties of a single entity by double-clicking on a row.
+
+10. Exit out of the **Edit Entity** dialog box by clicking the **Cancel** button.
 
 8.  Click **Timestamp** header twice to sort entities in a descending order by their Timestamp.
 
