Removed version numbers for Azure Emulator
The version numbers can change too often and make instructions
confusing.

--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -450,7 +450,7 @@
 
 11. Close **Contoso.Events – Microsoft Visual Studio**.
 
-> **Results:** After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
+> **Results:** After completing this exercise, you will have used Visual Studio and the Azure to create a comprehensive development environment for Azure Storage.
 
 ------------------------------------------------------------------------
 
