--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
@@ -298,7 +298,7 @@ The main tasks for this exercise are as follows:
 
 5.  Close the **Internet Explorer** and **Contoso.Events – Microsoft Visual Studio** applications.
 
-> **Results:** After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
+> **Results:** After completing this exercise, you will have used Visual Studio and the Azure to create a comprehensive development environment for Azure Storage.
 
 ©2016 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
