--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -180,9 +180,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
     a. Click the **MVC** template.
 
-    b. Ensure that the **Microsoft Azure – Host in the Cloud** check box is cleared.
-
-    c. Leave the remaining fields to their default values.
+    b. Leave the remaining fields to their default values.
 
     d. Click **Change Authentication**.
 
