--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -259,7 +259,7 @@
 
 10. Click **Publish**.
 
-> **Note:** It typically takes five to ten minutes for the publish process to complete. You can track the progress of your publish in the Microsoft Azure Activity Log (**View** &gt; **Other Windws** &gt; **Microsoft Azure Activity Log**) pane that displays when you publish your Web App project.
+> **Note:** It typically takes five to ten minutes for the publish process to complete. You can track the progress of your publish in the Microsoft Azure Activity Log (**View** &gt; **Other Windows** &gt; **Microsoft Azure Activity Log**) pane that displays when you publish your Web App project.
 
 #### Task 4: Verify that the Azure Web App website is using the new data
 
