Renaming references to App.config and Web.config

--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -275,9 +275,9 @@
 
 2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
 
-3. Locate and open the **app.config** file in the project.
+3. Locate and open the **App.config** file in the project.
 
-4. Within the **app.config** file, locate the following configuration setting:
+4. Within the **App.config** file, locate the following configuration setting:
 
     ```
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
@@ -311,9 +311,9 @@
 
 2. In the **Solution Explorer** pane, expand the **Contoso.Events.Management** project.
 
-3. Locate and open the **web.config** file in the project.
+3. Locate and open the **Web.config** file in the project.
 
-4. Within the **web.config** file, locate the following configuration setting:
+4. Within the **Web.config** file, locate the following configuration setting:
 
     ```
     <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
@@ -325,9 +325,9 @@
 
 2. In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
 
-3. Locate and open the **web.config** file in the project.
+3. Locate and open the **Web.config** file in the project.
 
-4. Within the **web.config** file, locate the following configuration setting:
+4. Within the **Web.config** file, locate the following configuration setting:
 
     ```
     <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
@@ -337,9 +337,9 @@
 
 2.  In the **Solution Explorer** pane, expand the **Contoso.Events.Worker** project.
 
-3. Locate and open the **app.config** file in the project.
+3. Locate and open the **App.config** file in the project.
 
-4. Within the **app.config** file, locate the following configuration setting:
+4. Within the **App.config** file, locate the following configuration setting:
 
     ```
     <add name="AzureWebJobsStorage" connectionString="UseDevelopmentStorage=true" />
@@ -347,7 +347,7 @@
 
 5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
 
-4. Within the **app.config** file, locate the following configuration setting:
+4. Within the **App.config** file, locate the following configuration setting:
 
     ```
     <add name="AzureWebJobsDashboard" connectionString="UseDevelopmentStorage=true" />
@@ -355,7 +355,7 @@
 
 5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
 
-4. Within the **app.config** file, locate the following configuration setting:
+4. Within the **App.config** file, locate the following configuration setting:
 
     ```
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
