--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -164,7 +164,7 @@
 
   h. Scroll down and click **OK**.
 
-9. In the **Create Virtual Machine** blade that displays, click **Summary** and click **OK** to create the virtual machine using your specified configuration.
+9. In the **Create Virtual Machine** blade that displays, click **Summary** and click **Create** to create the virtual machine using your specified configuration.
 
   > **Note:** The creation of a new virtual machine can take anywhere between 10 to 15 minutes. You will see a notification on the Dashboard (home screen) when your virtual machine is created and running.
 
@@ -189,8 +189,10 @@
   d. In the **Storage container** section, click on **Browse** and then from the **Storage account** blade, select the previously created storage account, **stor20532[Your Name Here]**
 
   e. In the **Containers** blade, select **vhds** container and click **Select**.
+  
+  f. Click **OK**
 
-  f. To create the second disk, click **Save**.
+  g. To create the second disk, click **Save**.
 
   > **Note:** Wait about five minutes for the empty disk to be attached to the virtual machine.
 
