--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -42,7 +42,7 @@
 
     b. In the **Access Type** list, select **Container**.
 
-    c. Click the **Create** button to create your container.
+    c. Click the **OK** button to create your container.
 
 #### Task 3: Obtain the Storage Account connection string
 
